--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.34",
+    "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
